# vm

./: .gitignore  CMakeLists.txt  ISA  LICENSE  README.md  exceptions.cpp  exceptions.h  inst.h  main.cpp  nan_box.cpp  nan_box.h  program.cpp  program.h  test.vasm  vasma.cpp  vm.cpp  vm.h  vme.cpp
.github/workflows/: cmake-multi-platform.yml
asm/: build.sh  build_generator.sh  gen.asm  nan_box.asm  template.asm
examples/: 123i.vasm  bitwise.vasm  casts.vasm  e.vasm  fibonacci.vasm  funcs.vasm  hello_world.vasm  memory.vasm  native.vasm  nums.vasm  pi.basm  pi.vasm  preprocessor.vasm  sin.hasm  sin.vasm  stdlib.hasm
include/: cout_colors.h  directive.h  exceptions.h  inst.h  lexer.h  nan_box.h  parser.h  program.h  program_args.h  vdb_command_parser.h  vm.h
src/: CMakeLists.txt  Lexer.cpp  dvasm.cpp  exceptions.cpp  lexer.cpp  nan_box.cpp  parser.cpp  program.cpp  vasm2x86_64.cpp  vasma.cpp  vdb.cpp  vdb_command_parser.cpp  vm.cpp  vme.cpp
tests/: CMakeLists.txt
